--- a/css/style.css
+++ b/css/style.css
@@ -27,18 +27,49 @@ div ul li{
 .checked{
     text-decoration: line-through;
 }
-#paper{
-    border-bottom: outset;
-    border-width:5px; 
+#bottomBorder{
+ background-color:gray;
+ color: gray;
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ width:50%;
+ height:5px;
+ margin-top: 15px;
 }
 .bottom img{
     position: absolute;
     float:left;
 }
 #share{
-    position: fixed;
+    position: relative;
     float: right;
     color:white;
     width: 150px;
     background-color:rgb(179, 45, 0);
+    height:35px;
+    width:115px;
+    text-align: center;
+    font-size: 13px;
+    right:450px;
+    padding: 8px;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+footer img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+footer{
+    text-align: center;
+    color: gray;
+}
+h3{
+    font-weight:bold;
+    position: relative;
+    left: 100px;
+}
+bottom{
+    position: relative;
+    left:300px;
 }
