--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,14 @@ div ul li{
     position:absolute;
     float:left;
     left: 650px;
-    top: 200px;
+    top: 900px;
     width: 2255px;
 }
 #right{
     position:absolute;
     float: right;
     width: 255px;
-    top: 200px;
+    top: 900px;
     right: 650px;
 }
 .checked{
@@ -72,4 +72,23 @@ h3{
 bottom{
     position: relative;
     left:300px;
+}
+
+section{
+    float: right;
+    position: relative;
+}
+
+nav>p{
+    position: relative;
+    font-size: 40px;
+    font-family: 'Pacifico', cursive;
+}
+
+h1{
+    font-size: 50px;
+}
+
+#tinyPrint{
+    position: relative;
 }
